--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.60.1
+isort==7.0.0
 kiwisolver==1.4.9
 matplotlib==3.10.7
 numpy==2.3.3
@@ -9,6 +10,7 @@ pandas==2.3.3
 patsy==1.0.1
 pillow==11.3.0
 pip-chill==1.0.3
+plottable==0.1.5
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -16,5 +18,6 @@ scipy==1.16.2
 setuptools==80.9.0
 six==1.17.0
 statsmodels==0.14.5
+tqdm==4.67.1
 tzdata==2025.2
 wheel==0.45.1
